--- a/index.html
+++ b/index.html
@@ -211,8 +211,13 @@
                </div>
 
                <div class="portfolio-card">
-                  <img class="card-img" src="images/ertak.png" alt="Product-Design-img">
-                  <h3>Fairy tale</h3>
+                  <div class="port-cont">
+                     <img class="image" src="images/ertak.png" alt="Product-Design-img">
+                     <div class="port-middle">
+                        <div class="port-text"><a href="#portfolio">Fairy tales</a></div>
+                     </div>
+                  </div>
+                  <h3>Fairy tales</h3>
                   <p>This site is an html site with some css added. The site shows fairy tales to children in an interesting way. There are a total of 3 tales on the site.
                   </p>
                   <div class="portfolio-trans">
