--- a/index.html
+++ b/index.html
@@ -201,8 +201,13 @@
 
             <div class="portfolio-items">
                <div class="portfolio-card">
-                  <img class="card-img" src="images/my-website.png" alt="">
-                  <h3>My first website</h3>
+                  <div class="port-cont">
+                     <img class="image" src="images/my-website.png" alt="Product-Design-img">
+                     <div class="port-middle">
+                        <div class="port-text"><a href="#portfolio">My first website</a></div>
+                     </div>
+                  </div>
+                 
                   <p>This site is my first site, created using basic html concepts. And it was used to give decorations to texts.</p>
                   <div class="portfolio-trans">
                      <a href="#">Read Case Study</a>
@@ -217,7 +222,7 @@
                         <div class="port-text"><a href="#portfolio">Fairy tales</a></div>
                      </div>
                   </div>
-                  <h3>Fairy tales</h3>
+                 
                   <p>This site is an html site with some css added. The site shows fairy tales to children in an interesting way. There are a total of 3 tales on the site.
                   </p>
                   <div class="portfolio-trans">
@@ -231,8 +236,13 @@
 
             <div class="portfolio-items">
                <div class="portfolio-card">
-                  <img class="card-img" src="images/my-campaign.png" alt="App-Design-img">
-                  <h3>My Campaign</h3>
+                  <div class="port-cont">
+                     <img class="image" src="images/my-campaign.png" alt="Product-Design-img">
+                     <div class="port-middle">
+                        <div class="port-text"><a href="#portfolio">My Campaign</a></div>
+                     </div>
+                  </div>
+
                   <p>This site is about the company. The site was prepared using a ready-made template made in the figma program. The site was built using html and css.
                   </p>
                   <div class="portfolio-trans">
@@ -242,8 +252,13 @@
                </div>
 
                <div class="portfolio-card">
-                  <img class="card-img" src="images/w3schools.png" alt="DashBoard-Design-img">
-                  <h3>W3schools clone</h3>
+                  <div class="port-cont">
+                     <img class="image" src="images/w3schools.png" alt="Product-Design-img">
+                     <div class="port-middle">
+                        <div class="port-text"><a href="#portfolio">W3schools clone</a></div>
+                     </div>
+                  </div>
+
                   <p>This site is an incomplete (initial) clone of w3schools.com. Text-style, selectors are used on the site.
                   </p>
                   <div class="portfolio-trans">
@@ -258,8 +273,12 @@
 
             <div class="portfolio-items">
                <div class="portfolio-card">
-                  <img class="card-img" src="images/techno life.png" alt="Website-Design-img">
-                  <h3>Techno life</h3>
+                  <div class="port-cont">
+                     <img class="image" src="images/techno life.png" alt="Product-Design-img">
+                     <div class="port-middle">
+                        <div class="port-text"><a href="#portfolio">Techno life</a></div>
+                     </div>
+                  </div>
                   <p>We import, distribute, manufacture and promote medicines and medical supplies in Europe and other countries.
                   </p>
                   <div class="portfolio-trans">
@@ -269,8 +288,12 @@
                </div>
 
                <div class="portfolio-card">
-                  <img class="card-img" src="images/dae-shop.png" alt="Product-Design-img">
-                  <h3>Dae Shop</h3>
+                  <div class="port-cont">
+                     <img class="image" src="images/dae-shop.png" alt="Product-Design-img">
+                     <div class="port-middle">
+                        <div class="port-text"><a href="#portfolio">Dae shop</a></div>
+                     </div>
+                  </div>
                   <p>This site is designed to sell various hair shampoos, balms and creams made from natural products. The site uses pseudo classes and semantic tags.
                   </p>
                   <div class="portfolio-trans">
@@ -284,7 +307,12 @@
 
             <div class="portfolio-items">
                <div class="portfolio-card">
-                  <img class="card-img" src="images/handbrake.png" alt="App-Design-img">
+                  <div class="port-cont">
+                     <img class="image" src="images/handbrake.png" alt="Product-Design-img">
+                     <div class="port-middle">
+                        <div class="port-text"><a href="#portfolio">HandBrake</a></div>
+                     </div>
+                  </div>
                   <h3>HandBrake</h3>
                   <p>HandBrake is a tool for converting video from nearly any format to a selection of modern, widely supported codecs
                   </p>
@@ -295,8 +323,12 @@
                </div>
 
                <div class="portfolio-card">
-                  <img class="card-img" src="images/porten.png" alt="DashBoard-Design-img">
-                  <h3>Porten</h3>
+                  <div class="port-cont">
+                     <img class="image" src="images/porten.png" alt="Product-Design-img">
+                     <div class="port-middle">
+                        <div class="port-text"><a href="#portfolio">Porten</a></div>
+                     </div>
+                  </div>
                   <p>This site is designed to sell luxury brand watches for men. The site contains the products of the world's top brands. The website is in Russian.
                   </p>
                   <div class="portfolio-trans">
